@@ -20,3 +20,11 @@ scalaVersion := "2.12.18"
 
 libraryDependencies += "org.apache.spark" %% "spark-core" % "3.5.1"
 libraryDependencies += "org.apache.spark" %% "spark-sql" % "3.5.1"
+
+fork in run := true
+
+javaOptions ++= Seq(
+  "--add-exports", "java.base/sun.nio.ch=ALL-UNNAMED"
+)
+
+classLoaderLayeringStrategy in run := ClassLoaderLayeringStrategy.Flat
